# exp-2023fy-data-mining

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/python/: Dockerfile
