[tool.poetry]
name = "exp-2023fy-data-mining"
version = "0.1.0"
description = "A repository for the experiment, data mining ( 7 ) held in 2023FY at NIT, Ibaraki College"
authors = ["Colk-tech <master@colk.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
